public/css/style.css
/* ... */
.form-group {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    padding: 20px 10vw 20px 10vw;
    border: none;
    line-height: 2rem;
}

.form-group button {
    text-decoration: none;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 2rem;
    font-size: 1.4rem;
    background-color: var(--btn);
    color: var(--white);
    height: 45px;
    width: 20%;
    cursor: pointer;
    border: none;
}

.form-group input {
    height: 2rem;
}

.board-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--lightgrey);
    width: 100%;
    height: fit-content;
    color: var(--black);
    padding: 0 0 0 0;
    border-radius: 20px;
    margin: 20px 0 20px 0;
}

#submit-board {
    text-decoration: none;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 2rem;
    font-size: 1rem;
    font-weight: 700;
    letter-spacing: 0.1rem;
    background-color: var(--btn);
    color: var(--white);
    height: 45px;
    width: 20%
}

#submit-board:hover {
    background-color: var(--btn-hover);
}

.board-form p {
    width: 100%;
    text-align: left;
    padding: 20px 0 10px 0;
}

#board-message {
    margin: 0 0 20px 0;
}



.center {
    justify-content: center;
    align-items: center;
    text-align: center;
}

.left {
    display: flex;
    flex-direction: row;
    align-items: left;
    text-align: left;
    justify-content: left;
    justify-items: left;
    padding: 0 0 0 2vw;
}

#full-wide {
    width: 100%;
}

.full-wide p {
    width: 100%;
    margin-right: 3vw;
}

.footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--lightgrey);
    width: 100%;
    height: auto;
    color: var(--black);
    font-size: 1rem;
    font-weight: 700;
    letter-spacing: 0.1rem;
    margin: 0 0 0 0;
    padding: 20px 0 20px 0;
}

/* ****** MEDIA QUERIES ****** */

@media (max-width: 850px) {

    .login-button {
        font-size: .7rem;
    }
    .comment-header p {
        font-size: 80%;
        width: 100%;
        padding: 0 5px 0 5px;
    }
    .comment-header h2 {
        font-size: 1.2rem;
        width: 100%;
    }

    .comment-message {
        padding: 0 0 0 5px;
    }
    
    .comment-message p{
        font-size: .9rem;
        padding: 10px 0 10px 5px;
        font-weight: 500;
    }
    .comment-header {
        flex-direction: column-reverse;
        align-items: normal;
        
    }
    .delete-board {
        align-self: right;
    }
    #submit-comment {
        width: 50%;
        padding: 0;
        font-size: .8rem;
    }
    .add-comment-btn, .comments-length, #submit-board {
        font-size: 1rem;
        width: 50%;
    }
    .comments-length {
        padding: 0 0 0 5px;
    }
    .x {
        font-size: 1rem;
        width: 100%;
        display: flex;
        flex-direction: row;
        padding: 10px 10px 10px 0;
        justify-content: right;
    }

    #edit-form p {
        width: 100%;
        padding: 0 0 0 0;
        border: red solid 1px;
    }

    

}

@media (max-width: 718px) {
    .btn, .comment-header p {
        font-size: .6rem;
    }
    .home-banner {
        font-size: 70%;
    }
    .header-bar a {
        font-size: 80%;
    }
    .logged-in {
        font-size: 70%;
    }
    
}

@media (max-width: 600px) {
    .home-banner {
        font-size: 60%;
    }
    .header-bar a {
        font-size: 70%;
    }
    .logged-in {
        font-size: 60%;
    }
    .comment-header p {
        font-size: .6rem;
    }
    .comment-header h2 {
        font-size: 1rem;
    }
    .comment-message {
        font-size: .8rem;
    }
    .comment-header {
        flex-direction: column;
        align-items: normal;
        
    }
    .delete-board {
        align-self: right;
    }
    #submit-comment {
        width: 50%;
        padding: 0;
    }
    .add-comment-btn, .comments-length, #submit-board {
        font-size: 1rem;
        width: 50%;
    }
}

@media (max-width: 515px) {
    .home-banner {
        font-size: 50%;
    }
    .header-bar a {
        font-size: 50%;
    }
    
    .comment-header p {
        font-size: .6rem;
    }
    .comment-header h2 {
        font-size: .9rem;
    }
    .comment-message {
        font-size: .8rem;
    }
    .comment-header {
        flex-direction: column;
        align-items: normal;
        
    }
    .delete-board {
        align-self: right;
    }
    #submit-comment {
        width: 50%;
        padding: 0;
    }
    .add-comment-btn, .comments-length, #submit-board {
        font-size: 1rem;
        width: 50%;
    }
    .logged-in a {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center;
        padding: 0 5px 0 5px;
        font-size: .7rem;
        
    }
    .form-group button {
        font-size: 1rem;
        width: 50%;
    }
    .home-btn, .dash-btn {
        
        padding: 0 0 0 2px;
    }

    
}

